Fix border-spacing value in CSS

--- a/thisisacssfile.css
+++ b/thisisacssfile.css
@@ -1,5 +1,6 @@
 table, th, td {
   border: 1px solid white;
+  border-spacing:0 lem;
 }
 .center {
   margin-left: auto;
